# tool-forge

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  REVIEW.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  claude-review.yml
docs/: architecture.md  evals.md  forge.md  orchestrator.md  providers.md  registry.md  sandbox.md  skills.md  spec.md  tui.md
src/toolforge/: __init__.py  config.py
src/toolforge/evals/: __init__.py
src/toolforge/forge/: __init__.py  candidates.py  manifest.py  promote.py  runner.py  runtime.py  test_author.py  tools.py  worker.py  worker_tools.py
src/toolforge/orchestrator/: __init__.py  ask_user.py  bootstrap.py  hooks.py  loop.py  repl.py  transcript.py
src/toolforge/orchestrator/prompts/: __init__.py  system.md
src/toolforge/providers/: __init__.py  _anthropic_sanitize.py  anthropic.py  base.py  messages.py  oauth_anthropic.py  openai_compat.py  usage.py
src/toolforge/registry/: __init__.py  registry.py  safety.py  types.py
src/toolforge/sandbox/: __init__.py  bash.py  run_bash.py
src/toolforge/skills/: __init__.py
src/toolforge/tui/: __init__.py  app.py  bridge.py  messages.py  screens.py  styles.tcss  widgets.py
tests/: _docker.py  conftest.py  test_config_orchestrator.py  test_config_test_author.py  test_config_worker.py  test_smoke.py
tests/forge/: test_candidates.py  test_forge_live.py  test_manifest.py  test_promote.py  test_runner.py  test_runtime.py  test_test_author.py  test_test_author_live.py  test_tools.py  test_worker.py  test_worker_live.py  test_worker_tools.py
tests/orchestrator/: _harness.py  conftest.py  test_ask_user.py  test_bootstrap.py  test_hooks.py  test_integration_live.py  test_loop.py  test_prompts.py  test_repl.py  test_transcript.py
tests/providers/: test_anthropic_client.py  test_anthropic_translate.py  test_config.py  test_error_taxonomy.py  test_live.py  test_messages.py  test_oauth.py  test_openai_compat.py  test_sanitize.py  test_usage_hook.py
tests/registry/: test_registry.py  test_safety.py
tests/sandbox/: test_bash.py  test_bash_live.py  test_run_bash.py
tests/tui/: _harness.py  test_app.py
