[project]
name = "toolforge"
version = "0.1.0"
description = "Self-expanding tool-forge agent: when it lacks a tool for a task, it forges the tool itself."
readme = "README.md"
authors = [
    { name = "Ido Assaraf", email = "ido2103@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
files = ["src", "tests"]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
